feat(docs): use swagger to automatically generate docs for article and tag
