# internal/models/tag.go
@@ -1,5 +1,7 @@
 package models
 
+import "github.com/suisbuds/miao/pkg/app"
+
 type Tag struct {
 	*Model
 	Name  string `json:"name"`
@@ -8,4 +10,9 @@ type Tag struct {
 
 func (t Tag) TableName() string {
 	return "miao_tag"
+}
+
+type TagSwagger struct {
+	List  []*Tag
+	Pager *app.Pager
 }
