# internal/routers/api/v1/tag.go
@@ -16,7 +16,7 @@ func NewTag() Tag {
 // @Summary 获取单个标签
 // @Produce  json
 // @Param id path int true "标签 ID"
-// @Success 200 {object} models.Tag "成功"
+// @Success 200 {object} models.TagSwagger "成功"
 // @Failure 400 {object} errcode.Error "请求错误"
 // @Failure 500 {object} errcode.Error "内部错误"
 // @Router /api/v1/tags/{id} [get]
@@ -29,7 +29,7 @@ func (t Tag) Get(c *gin.Context) {
 // @Param state query int false "状态" Enums(0, 1) default(1)
 // @Param page query int false "页码"
 // @Param page_size query int false "每页数量"
-// @Success 200 {object} models.Tag "成功"
+// @Success 200 {object} models.TagSwagger "成功"
 // @Failure 400 {object} errcode.Error "请求错误"
 // @Failure 500 {object} errcode.Error "内部错误"
 // @Router /api/v1/tags [get]
@@ -40,7 +40,7 @@ func (t Tag) List(c *gin.Context) {}
 // @Param name body string true "标签名称" minlength(3) maxlength(100)
 // @Param state body int false "状态" Enums(0, 1) default(1)
 // @Param created_by body string true "创建者" minlength(3) maxlength(100)
-// @Success 200 {object} models.Tag "成功"
+// @Success 200 {object} models.TagSwagger "成功"
 // @Failure 400 {object} errcode.Error "请求错误"
 // @Failure 500 {object} errcode.Error "内部错误"
 // @Router /api/v1/tags [post]
@@ -52,7 +52,7 @@ func (t Tag) Create(c *gin.Context) {}
 // @Param name body string false "标签名称" minlength(3) maxlength(100)
 // @Param state body int false "状态" Enums(0, 1) default(1)
 // @Param modified_by body string true "修改者" minlength(3) maxlength(100)
-// @Success 200 {array} models.Tag "成功"
+// @Success 200 {array} models.TagSwagger "成功"
 // @Failure 400 {object} errcode.Error "请求错误"
 // @Failure 500 {object} errcode.Error "内部错误"
 // @Router /api/v1/tags/{id} [put]
